[package]
name = "inventory"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls", "macros", "migrate"] }
tokio = { version = "1", features = ["full"] }
#ferrumec = {git="https://github.com/Austin-rgb/ferrumec"}
#event-stream={git="https://github.com/Austin-rgb/event-stream"}
actixutils = {path = "../actixutils"}
#[patch."https://github.com/Austin-rgb/ferrumec"]
ferrumec = { path = "../ferrumec" }

#[patch."https://github.com/Austin-rgb/event-stream"]
event-stream = { path = "../event-stream" }
tracing = "0.1.44"
async-trait = "0.1.89"
